<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/pass_view_extra_data">

    <FrameLayout
        android:id="@+id/barcode_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/barcode_panel_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:id="@+id/barcode_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/barcode"
            android:scaleType="fitCenter"
            tools:src="@mipmap/ic_launcher" />
    </FrameLayout>

    <TextView
        android:id="@+id/barcode_alt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        android:textIsSelectable="true"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/zoomOut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/zoomIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />
</merge>
