...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/barcode" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_barcode_button"
                        style="@style/PassWallet.EditActionButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_barcode"
                        app:icon="@drawable/ic_barcode_24" />

...
